force-app/main/default/objects/Financial_Year__mdt/Financial_Year__mdt.object-meta.xml
<CustomObject>
    <label>Financial Year</label>
    <pluralLabel>Financial Years</pluralLabel>
</CustomObject>