force-app/main/default/objects/Financial_Year__mdt/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>