force-app/main/default/objects/Financial_Year__mdt/fields/Quarter_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Quarter_End_Month__c</fullName>
    <label>Quarter End Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>