force-app/main/default/objects/Financial_Year__mdt/fields/Quarter_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Start_Month__c</fullName>
    <label>Quarter Start Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>