force-app/main/default/objects/Financial_Year__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>Quarter__c</columns>
    <columns>Quarter_Start_Month__c</columns>
    <columns>Quarter_End_Month__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>